[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Menus/MenuScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/TitleMenuScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/SFX/At Dooms Gate.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/GFX/HUD/doom_background.jpg" type="Texture" id=4]
[ext_resource path="res://assets/GFX/HUD/doom_smaller.png" type="Texture" id=5]
[ext_resource path="res://assets/Fonts/DooM.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="TitleMenuScreen" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="BGM" type="AudioStreamPlayer" parent="." index="0"]
stream = ExtResource( 3 )
volume_db = -20.0
autoplay = true

[node name="BackgroundPicture" type="TextureRect" parent="." index="2"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="VBoxContainer" parent="HBoxContainer" index="0"]
margin_left = 300.0
margin_right = 660.0

[node name="FrontImage" type="TextureRect" parent="HBoxContainer/VBoxContainer" index="0"]
margin_top = 124.0
margin_right = 360.0
margin_bottom = 314.0
texture = ExtResource( 5 )

[node name="HBoxContainer" parent="HBoxContainer/VBoxContainer" index="1"]
margin_top = 318.0
margin_right = 360.0
margin_bottom = 416.0

[node name="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer" index="0"]
margin_left = 91.0
margin_right = 268.0
margin_bottom = 98.0

[node name="StartButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="0"]
margin_right = 177.0
margin_bottom = 47.0
mouse_filter = 2
custom_styles/focus = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_colors/font_color_pressed = Color( 0.643137, 0.643137, 0.643137, 1 )
text = "START"
flat = true

[node name="QuitButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="1"]
margin_top = 51.0
margin_right = 177.0
margin_bottom = 98.0
mouse_filter = 2
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_colors/font_color_pressed = Color( 0.643137, 0.643137, 0.643137, 1 )
text = "QUIT"
flat = true
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_mouse_entered"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
